# wind_force

./: compose.yml  readme.md
components/backend/: .gitignore  Cargo.toml  readme.md
components/backend/.config/: hakari.toml
components/backend/crates/migrate/: Cargo.toml
components/backend/crates/migrate/migrations/: 0001_create_instructors_table.sql  0002_create_products_table.sql  0003_create_events_table.sql
components/backend/crates/migrate/src/: lib.rs
components/backend/crates/proto/: Cargo.toml  build.rs
components/backend/crates/proto/lib/common/types/: time.proto  uuid.proto
components/backend/crates/proto/lib/schedule/v1/: service.proto
components/backend/crates/proto/lib/schedule/v1/model/: event.proto  instructor.proto  product.proto
components/backend/crates/proto/src/: common.rs  lib.rs
components/backend/crates/proto/src/common/: time.rs  uuid.rs
components/backend/crates/proto/tests/: common.rs
components/backend/crates/server/: Cargo.toml
components/backend/crates/server/src/lib/: config.rs
components/backend/crates/services/: Cargo.toml
components/backend/crates/services/src/: auth.rs  lib.rs  schedule.rs
components/backend/crates/services/src/auth/: adapters.rs
components/backend/crates/services/src/auth/domain/: model.rs  ports.rs
components/backend/crates/services/src/auth/domain/model/: auth.rs  credentials.rs  session.rs
components/backend/crates/services/src/schedule/: adapters.rs  domain.rs
components/backend/crates/services/src/schedule/adapters/: grpc.rs
components/backend/crates/services/src/schedule/adapters/grpc/: server.rs
components/backend/crates/services/src/schedule/adapters/grpc/server/: handlers.rs
components/backend/crates/services/src/schedule/adapters/sqlite/: repository.rs
components/backend/crates/services/src/schedule/domain/: model.rs  ports.rs  schema.rs  service.rs
components/backend/crates/services/src/schedule/domain/model/: event.rs  instructor.rs  product.rs  time_span.rs
components/backend/crates/services/src/trusted/adapters/: secure.rs
components/backend/crates/services/src/trusted/domain/: ports.rs
components/backend/crates/services/tests/integration/: schedule.rs
components/backend/crates/services/tests/integration/common/: setup.rs
components/backend/crates/services/tests/services/: common.rs  main.rs  schedule.rs
components/backend/crates/services/tests/services/common/: mock.rs
components/backend/crates/services/tests/services/common/mock/: schedule.rs  trusted.rs
components/backend/crates/services/tests/services/common/mock/schedule/: ports.rs
components/backend/crates/services/tests/services/schedule/: model.rs  service.rs
components/backend/crates/workspace-hack/: Cargo.toml
docker/: backend.dockerfile  common.yml  http-balancer.dockerfile  website.dockerfile
(+51 files in other folders)
