[package]
name = "server"
version = "0.0.1"
edition.workspace = true

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "wind_force"
path = "src/bin/main.rs"

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }

proto.workspace = true
services.workspace = true

anyhow.workspace = true

tonic.workspace = true
tokio.workspace = true

sqlx.workspace = true
